# klartex.se

./: .gitignore  CLAUDE.md  PLAN.md  index.html  llms.txt
.github/workflows/: backend.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/lib/: serialize.ts
backend/: Dockerfile  README.md  pyproject.toml
backend/src/klartex_se/: __init__.py  auth.py  discovery.py  main.py  page_template_router.py  page_templates.py  render.py
backend/tests/: test_discovery.py  test_page_templates.py  test_render.py
deploy/: deploy.sh
infra/: .env.example  Caddyfile  README.md  cloud-init.yaml  docker-compose.yml  provision.sh
