[project]
name = "klartex-se-backend"
version = "0.2.0"
description = "HTTP backend for klartex.se — wraps klartex as a library"
requires-python = ">=3.12"
dependencies = [
    "klartex==0.11.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",       # for FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klartex_se"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
